<resources>
    <string name="app_name">Cosmostation</string>
    <string name="db_password" translatable="false">wannabit</string>
    <string name="url_moon_pay" translatable="false">https://buy.moonpay.io</string>
    <string name="url_station_old" translatable="false">https://api-wallet.cosmostation.io/</string>
    <string name="url_station" translatable="false">https://api-utility.cosmostation.io/</string>
    <string name="url_lcd_cosmos_main" translatable="false">https://lcd-cosmos-app-standby.cosmostation.io/</string>
    <string name="url_api_cosmos_main" translatable="false">https://api.cosmostation.io/</string>
    <string name="url_lcd_cosmos_test" translatable="false">https://lcd-office.cosmostation.io/stargate-final/</string>
    <string name="url_api_cosmos_test" translatable="false">https://api-office.cosmostation.io/stargate-final/</string>
    <string name="url_lcd_iris_main" translatable="false">https://lcd-iris-app.cosmostation.io/</string>
    <string name="url_api_iris_main" translatable="false">https://api-iris.cosmostation.io/</string>
    <string name="url_lcd_iris_test" translatable="false">https://lcd-office.cosmostation.io/bifrost/</string>
    <string name="url_api_iris_test" translatable="false">https://api-office.cosmostation.io/bifrost/</string>
    <string name="url_main_bnb" translatable="false">https://dex.binance.org/</string>
    <string name="url_test_bnb" translatable="false">https://testnet-dex.binance.org/</string>
    <string name="url_test_bnb_faucet" translatable="false">https://faucet-binance.cosmostation.io</string>
    <string name="url_lcd_kava_main" translatable="false">https://lcd-kava-app.cosmostation.io/</string>
    <string name="url_api_kava_main" translatable="false">https://api-kava.cosmostation.io/</string>
    <string name="url_lcd_kava_test" translatable="false">https://lcd-office.cosmostation.io/kava-testnet-13000/</string>
    <string name="url_api_kava_test" translatable="false">https://api-office.cosmostation.io/kava-testnet-13000/</string>
    <string name="url_test_kava_faucet" translatable="false"></string>
    <string name="url_api_iov_main" translatable="false">https://api-iov.cosmostation.io/</string>
    <string name="url_lcd_iov_test" translatable="false">https://iovnscli-rest-api.cluster-galaxynet.iov.one/</string>
    <string name="url_api_iov_test" translatable="false"></string>
    <string name="url_api_band_main" translatable="false">https://api-band.cosmostation.io/</string>
    <string name="url_lcd_ok" translatable="false">https://www.okex.com/okexchain/v1/</string>
    <string name="url_lcd_ok_test" translatable="false">https://www.okex.com/okexchain-test/v1/</string>
    <string name="url_api_ok_test" translatable="false"></string>
    <string name="url_api_certik" translatable="false">https://api-certik.cosmostation.io/</string>
    <string name="url_lcd_secret" translatable="false">https://secret-3--lcd--full.datahub.figment.io/apikey/290520481df876316ee7664924c0a1df/</string>
    <string name="url_api_secret" translatable="false"></string>
    <string name="url_api_akash" translatable="false">https://api-akash.cosmostation.io/</string>
    <string name="url_api_persis" translatable="false">https://api-persistence.cosmostation.io/</string>
    <string name="url_api_sentinel" translatable="false">https://api-sentinel.cosmostation.io/</string>
    <string name="url_api_fetch" translatable="false">https://api-fetchai.cosmostation.io/</string>
    <string name="url_api_crypto" translatable="false">https://api-cryptocom.cosmostation.io/</string>
    <string name="url_api_sif" translatable="false">https://api-sifchain.cosmostation.io/</string>
    <string name="url_api_sif_finance" translatable="false">https://api-cryptoeconomics.sifchain.finance/</string>
    <string name="url_lcd_ki" translatable="false">https://lcd-kichain.cosmostation.io/</string>
    <string name="url_api_ki" translatable="false">https://api-kichain.cosmostation.io/</string>
    <string name="url_api_medibloc" translatable="false">https://api-medibloc.cosmostation.io/</string>
    <string name="url_api_osmosis" translatable="false">https://api-osmosis.cosmostation.io/</string>
    <string name="url_api_emoney" translatable="false">https://api-emoney.cosmostation.io/</string>
    <string name="url_api_juno" translatable="false">https://api-juno.cosmostation.io/</string>
    <string name="url_api_axelar" translatable="false">https://api-office.cosmostation.io/axelar-testnet-adelaide/</string>
    <string name="url_hdac_mainnet" translatable="false">https://insight-api.rizon.world/insight-api/</string>
    <string name="url_rizon_swap_status_mainnet" translatable="false">https://swap-api.rizon.world/</string>
    <string name="url_api_rizon" translatable="false">https://api-rizon.cosmostation.io/</string>
    <string name="url_hdac_testnet" translatable="false">https://insight-api.testnet.rizon.world/insight-api/</string>
    <string name="url_rizon_swap_status_testnet" translatable="false">https://swap-api.testnet.rizon.world/</string>
    <string name="url_api_rizon_test" translatable="false">https://api-rizon-testnet.cosmostation.io/</string>
    <string name="url_hdac" translatable="false">https://wallet.new.hdactech.com/insight-api/</string>
    <string name="url_api_althea_test" translatable="false">https://api-office.cosmostation.io/althea-testnet2v1/</string>
    <string name="url_api_umee_test" translatable="false">https://api-office.cosmostation.io/umee-betanet-1/</string>
    <string name="key_mnemonic" translatable="false">MNEMONIC_KEY</string>
    <string name="key_password" translatable="false">PASSWORD_KEY</string>
    <string name="str_atom_c" translatable="false">ATOM</string>
    <string name="str_iris_c" translatable="false">IRIS</string>
    <string name="str_photon_c" translatable="false">PHOTINO</string>
    <string name="str_kava_c" translatable="false">KAVA</string>
    <string name="str_iov_c" translatable="false">IOV</string>
    <string name="str_band_c" translatable="false">BAND</string>
    <string name="str_ok_c" translatable="false">OKT</string>
    <string name="str_bnb_c" translatable="false">BNB</string>
    <string name="str_btc_c" translatable="false">BTC</string>
    <string name="str_ctk_c" translatable="false">CTK</string>
    <string name="str_scrt_c" translatable="false">SCRT</string>
    <string name="str_akt_c" translatable="false">AKT</string>
    <string name="str_xprt_c" translatable="false">XPRT</string>
    <string name="str_dvpn_c" translatable="false">DVPN</string>
    <string name="str_fet_c" translatable="false">FET</string>
    <string name="str_cro_c" translatable="false">CRO</string>
    <string name="str_sif_c" translatable="false">ROWAN</string>
    <string name="str_ki_c" translatable="false">XKI</string>
    <string name="str_rizon_c" translatable="false">ATOLO</string>
    <string name="str_medi_c" translatable="false">MED</string>
    <string name="str_althea_c" translatable="false">ALTG</string>
    <string name="str_osmosis_c" translatable="false">OSMO</string>
    <string name="str_uion_c" translatable="false">ION</string>
    <string name="str_umee_c" translatable="false">UMEE</string>
    <string name="str_ngm_c" translatable="false">NGM</string>
    <string name="str_axl_c" translatable="false">AXL</string>
    <string name="str_juno_c" translatable="false">JUNO</string>
    <string name="str_muon_c" translatable="false">MUON</string>
    <string name="str_bif_c" translatable="false">BIF</string>
    <string name="str_create_swap_memo_c" translatable="false">Create Atomic Swap via Cosmostation Wallet</string>
    <string name="str_claim_swap_memo_c" translatable="false">Claim Atomic Swap via Cosmostation Wallet</string>
    <string name="str_refund_swap_memo_c" translatable="false">Refund Atomic Swap via Cosmostation Wallet</string>
    <string name="str_cosmos_time_format" translatable="false">yyyy-MM-dd<![CDATA["'"]]>T<![CDATA["'"]]>HH:mm:ss.SSS</string>
    <string name="str_block_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss.SSSSSSSSS\'Z\']]></string>
    <string name="str_tx_time_format" translatable="false"><![CDATA[yyyy-MM-dd\'T\'HH:mm:ss\'Z\']]></string>
    <string name="str_cosmos_main_net">Cosmos Mainnet</string>
    <string name="str_cosmos_test_net_12k">COSMOS Testnet (GAIA 12k)</string>
    <string name="str_cosmos_test_net_13k">COSMOS Testnet (GAIA 13k)</string>
    <string name="str_iris_main_net">Iris Mainnet</string>
    <string name="str_bnb_main_net">Binance Mainnet</string>
    <string name="str_iov_main_net">Starname Mainnet</string>
    <string name="str_kava_main_net">Kava Mainnet</string>
    <string name="str_band_main_net">Band Mainnet</string>
    <string name="str_persis_main_net">Persistence Mainnet</string>
    <string name="str_secret_main_net">Secret Mainnet</string>
    <string name="str_certik_main_net">Certik Mainnet</string>
    <string name="str_akash_main_net">Akash Mainnet</string>
    <string name="str_okex_main_net">Okex Mainnet</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="str_create">CREATE</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_import2">Import</string>
    <string name="str_mnemonic">Mnemonic</string>
    <string name="str_watch">Watch</string>
    <string name="str_address">Address</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_continue">Continue</string>
    <string name="str_network_error_title">Network Error</string>
    <string name="str_network_error_msg">Can not connect to the network. \nPlease try again in a few minutes.</string>
    <string name="str_retry">Retry</string>
    <string name="str_kava_newpath_title">Select Key Path</string>
    <string name="str_kava_newpath_msg">BIP44 for KAVA key generation will be implemented starting March, 2020.\n\nIf you created an address before March, 2020, please select [Original Path]. If you created an address after March, 2020, please select [New Path].\n\nIf you mistakenly selected the wrong path, it will not affect your original KAVA wallet. Simply press [Import Mnemonics] to re-select your path.</string>
    <string name="str_kava_old_path"><![CDATA[OLD PATH (44\'/118\'/0\'/0)]]></string>
    <string name="str_kava_new_path"><![CDATA[NEW PATH (44\'/459\'/0\'/0)]]></string>
    <string name="str_kava_incentive_title">USDX Minting Incentive</string>
    <string name="str_kava_incentive_msg">KAVA incentive for users who deposit assets to create CDPs and mint USDX, distributed weekly!\nThe more USDX you mint, the more KAVA rewards you get.</string>
    <string name="str_kava_participate">Participate</string>
    <string name="str_kava_participate_done">Participation Complete!!</string>
    <string name="str_using_fingerprint">Using Fingerprint</string>
    <string name="str_ask_using_fingerprint">Do you want to enable fingerprint authentication?</string>
    <string name="str_sorting_s">Sorting</string>
    <string name="str_sorting_by_name">By Name</string>
    <string name="str_sorting_by_my_delegated">By My Delegations</string>
    <string name="str_sorting_by_reward">By Reward</string>
    <string name="str_delegate_warn_msg">You can receive staking rewards by delegating to a validator. You may lose a portion of your delegated stake if a problem occurs with the selected node. Please perform careful due diligence before delegating.\nWhen you undelegate, there is an unbonding period. You will not receive staking rewards during this time.</string>
    <string name="str_deposit_warn_title">Deposit Notice</string>
    <string name="str_ibc_warning_c">Notice</string>
    <string name="str_ibc_unknown_relayer_msg">This is an unconfirmed relayer. \nIBC transfers through an inoperable relayer may result in loss of assets. \nDo you wish to continue?</string>
</resources>