<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_2"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/space_6"
    app:cardElevation="1.5dp"
    app:cardBackgroundColor="@color/colorTransBg"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/font_ss_14_white"
            android:text="@string/str_kava_incentive_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            style="@style/font_ss_12_gray1"
            android:text="@string/str_kava_incentive_msg"/>

        <RelativeLayout
            android:id="@+id/btn_kava_incentive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_40"
            android:minHeight="@dimen/space_40"
            android:layout_marginTop="@dimen/space_12"
            android:background="@drawable/btn_trans_with_border"
            android:clickable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/incentive_s_ic"
                android:drawablePadding="@dimen/space_8"
                android:gravity="center"
                style="@style/font_ss_14_white"
                android:text="@string/str_kava_participate" />
        </RelativeLayout>

        <TextView
            android:id="@+id/kava_incentive_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:gravity="right"
            style="@style/font_ss_14_photon"
            android:text="@string/str_kava_participate_done"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.v7.widget.CardView>