<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/space_36"
                android:layout_height="@dimen/space_36"
                android:src="@drawable/ic_st_fingerprint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_12"
                style="@style/font_ssl_17_black"
                android:gravity="center"
                android:text="@string/str_using_fingerprint"/>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginRight="@dimen/space_12"
            android:layout_marginLeft="@dimen/space_12"
            style="@style/font_ssl_17_black"
            android:gravity="center_horizontal"
            android:text="@string/str_ask_using_fingerprint"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_nega"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/str_no"/>
            <Button
                android:id="@+id/btn_posi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/str_yes"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>