<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16">
        <LinearLayout
            android:id="@+id/btn_import_mnemonic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/btn_trans_with_border">
            <LinearLayout
                android:id="@+id/import_mnemonic_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-3dp"
                    style="@style/font_ss_9_gray1"
                    android:text="@string/str_import2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-3dp"
                    style="@style/font_ss_14_white"
                    android:text="@string/str_mnemonic"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_watch_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginTop="@dimen/space_16"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/btn_trans_with_border">
            <LinearLayout
                android:id="@+id/import_watch_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-3dp"
                    style="@style/font_ss_9_gray1"
                    android:text="@string/str_watch"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-3dp"
                    style="@style/font_ss_14_white"
                    android:text="@string/str_address"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_45"
            android:layout_marginTop="@dimen/space_12"
            android:minHeight="@dimen/space_45"
            android:background="@drawable/btn_trans_with_border"
            style="@style/font_ss_14_white"
            android:text="@string/str_create"/>

    </LinearLayout>
</RelativeLayout>