<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_32">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            style="@style/font_ss_17_gray8"
            android:gravity="center"
            android:text="@string/str_kava_newpath_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginLeft="@dimen/space_12"
            android:layout_marginRight="@dimen/space_12"
            android:text="@string/str_kava_newpath_msg"
            style="@style/font_ss_11_gray1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray10"
            android:layout_marginTop="@dimen/space_16"/>
        <LinearLayout
            android:id="@+id/old_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/space_12">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_kava_old_path"
                style="@style/font_ss_14_gray8"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGray10"/>
        <LinearLayout
            android:id="@+id/new_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/space_12">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_8"
                android:text="@string/str_kava_new_path"
                style="@style/font_ss_14_gray8"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>